removed image, added header

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+<header><div id="title-header" class="animated slideInDown"><h1>Tic Tac Attack</h1></div></header>
 <body>
 <div class="main-wrapper animated fadeIn 2sec">
-    <img class="logo-img animated slideInDown" src="https://www.dropbox.com/s/y1z742nth3f0wtd/control-concepts-logo.jpg?raw=1" alt="logo">
         <table class="table-wrapper">
             <!-- Table used to represnt the Tic tac toe board.  -->
             <tr>
