Renamed replay button to reset button

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <h1>Computer Score: &nbsp&nbsp</h1>
         <h1 class="ai-Score"></h1>
     </div>
-    <button class="replay-btn animated pulse" onClick="startGame()">
-        <h1>Replay Game</h1></button>
+    <button class="reset-btn animated pulse" onClick="startGame()">
+        <h1>Reset Game</h1></button>
         </div>
     </div>
 </div>
